syntax = "proto3";

option go_package = "github.com/aldian78/go-react-ecommerce/proto/pb/product";

import "basecommon/base_response.proto";
import "basecommon/pagination.proto";
import "buf/validate/validate.proto";
import "api/api.proto";

package product;

service ProductService {
    rpc CreateProduct(api.APIREQ) returns (api.APIRES);
    rpc DetailProduct(api.APIREQ) returns (api.APIRES);
    rpc EditProduct(api.APIREQ) returns (api.APIRES);
    rpc DeleteProduct(api.APIREQ) returns (api.APIRES);
    rpc ListProduct(api.APIREQ) returns (api.APIRES);
    rpc ListProductAdmin(api.APIREQ) returns (api.APIRES);
    rpc HighlightProducts(api.APIREQ) returns (api.APIRES);
}

message CreateProductRequest {
    string name = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
    string description = 2 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
    double price = 3 [(buf.validate.field).double.gte = 0];
    string image_file_name = 4 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message CreateProductResponse {
    basecommon.BaseResponse base = 1;
    string id = 2;
}

message DetailProductRequest {
    string id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message DetailProductResponse {
    basecommon.BaseResponse base = 1;
    string id = 2;
    string name = 3;
    string description = 4;
    double price = 5;
    string image_url = 6;
}

message EditProductRequest {
    string id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
    string name = 2 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
    string description = 3 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
    double price = 4 [(buf.validate.field).double.gte = 0];
    string image_file_name = 5 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message EditProductResponse {
    basecommon.BaseResponse base = 1;
    string id = 2;
}

message DeleteProductRequest {
    string id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message DeleteProductResponse {
    basecommon.BaseResponse base = 1;
}

message ListProductRequest {
    basecommon.PaginationRequest pagination = 1;
}

message ListProductResponseItem {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string image_url = 5;
}

message ListProductResponse {
    basecommon.BaseResponse base = 1;
    basecommon.PaginationResponse pagination = 2;
    repeated ListProductResponseItem data = 3;
}

message ListProductAdminRequest {
    basecommon.PaginationRequest pagination = 1;
}

message ListProductAdminResponseItem {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string image_url = 5;
}

message ListProductAdminResponse {
    basecommon.BaseResponse base = 1;
    basecommon.PaginationResponse pagination = 2;
    repeated ListProductAdminResponseItem data = 3;
}

message HighlightProductsRequest {}

message HighlightProductsResponseItem {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string image_url = 5;
}

message HighlightProductsResponse {
    basecommon.BaseResponse base = 1;
    repeated HighlightProductsResponseItem data = 2;
}